k8s/sandbox-devlopement.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sandbox-deployement

spec:
  replicas: 1

  selector:
    matchLabels:
      app: sandbox

  template:
    metadata:
      labels:
        app: sandbox

    spec:
      serviceAccountName: resource-manager
      containers:
        - name: main-sandbox-container
          image: sandbox:latest
          imagePullPolicy: IfNotPresent

          resources:
            limits:
              cpu: "1000m"
              memory: "2Gi"
            requests:
              cpu: "250m"
              memory: "500Mi"

          livenessProbe:
            httpGet:
              path: /api/sandbox/health
              port: 3000
            initialDelaySeconds: 30
            timeoutSeconds: 10

          readinessProbe:
            httpGet:
              path: /api/sandbox/health
              port: 3000
            initialDelaySeconds: 15
            timeoutSeconds: 10

          ports:
            - containerPort: 3000
              name: sandbox-port
